<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.activities.SignUpActivity"
        android:background="@color/background">

        <!-- Guideline for better content positioning -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/signUpTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="@font/delius_unicase_bold"
            android:textColor="@color/text_secondary"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="@+id/signUpTv"
            app:layout_constraintEnd_toEndOf="@id/signUpTv"
            app:layout_constraintTop_toBottomOf="@id/signUpTv"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:drawableStart="@drawable/person"
                android:drawablePadding="12dp"
                android:inputType="text"
                android:padding="16dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="@+id/tilUsername"
            app:layout_constraintEnd_toEndOf="@id/tilUsername"
            app:layout_constraintTop_toBottomOf="@id/tilUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:drawableStart="@drawable/mail_24px"
                android:drawablePadding="12dp"
                android:inputType="textWebEmailAddress"
                android:padding="16dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="@+id/tilEmail"
            app:layout_constraintEnd_toEndOf="@id/tilEmail"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="12dp"
                android:inputType="textWebPassword"
                android:padding="16dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="@+id/tilPassword"
            app:layout_constraintEnd_toEndOf="@id/tilPassword"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="12dp"
                android:inputType="textWebPassword"
                android:padding="16dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/navToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword"
            app:layout_constraintEnd_toEndOf="@id/tilConfirmPassword"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/text_primary"
                android:fontFamily="@font/delius_unicase_bold"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/navToLoginTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginStart="8dp"
                android:textColor="@color/button_primary"
                android:fontFamily="@font/delius_unicase_bold"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/sign_up"
            android:fontFamily="@font/delius_unicase_bold"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="@color/button_primary"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="@id/navToLogin"
            app:layout_constraintStart_toStartOf="@id/tilConfirmPassword"
            app:layout_constraintTop_toBottomOf="@id/navToLogin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
